WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
130278
Fix scrollperf logging
https://bugs.webkit.org/show_bug.cgi?id=130278
Summary
Fix scrollperf logging
Simon Fraser (smfr)
Reported
2014-03-14 18:08:04 PDT
Fix scrollperf logging
Attachments
Patch
(1.84 KB, patch)
2014-03-14 18:09 PDT
,
Simon Fraser (smfr)
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Simon Fraser (smfr)
Comment 1
2014-03-14 18:09:34 PDT
Created
attachment 226789
[details]
Patch
WebKit Commit Bot
Comment 2
2014-03-14 20:21:50 PDT
Comment on
attachment 226789
[details]
Patch Clearing flags on attachment: 226789 Committed
r165672
: <
http://trac.webkit.org/changeset/165672
>
WebKit Commit Bot
Comment 3
2014-03-14 20:21:55 PDT
All reviewed patches have been landed. Closing bug.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug