Fix scrollperf logging https://bugs.webkit.org/show_bug.cgi?id=130278 <rdar://problem/16320003>

Reviewed by Anders Carlsson.

r165493 broke scrollperf logging by adding in the scroll position
to the viewport rect, which used to be 0,0 based. Restore
the previous behavior.

* page/scrolling/mac/ScrollingTreeScrollingNodeMac.mm:
(WebCore::ScrollingTreeScrollingNodeMac::logExposedUnfilledArea):


Canonical link: https://commits.webkit.org/148259@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@165672 268f45cc-cd09-0410-ab3c-d52691b4dbfc